--- a/src/main/resources/static/buttonTwo.html
+++ b/src/main/resources/static/buttonTwo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-<div class="container">
+<div class="container" style="background-color: chartreuse">
     <div class="headbar">
         <p>This is the button two page.</p>
     </div>
