Changed to h1 for top message on all pages.

--- a/src/main/resources/static/buttonOne.html
+++ b/src/main/resources/static/buttonOne.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" style="background-color: darkgray">
     <div class="headbar">
-        <p>This is the button one page.</p>
+        <h1>This is the button one page.</h1>
     </div>
     <div>
         <nav class="navbar">
