--- a/src/main/resources/static/buttonTwo.html
+++ b/src/main/resources/static/buttonTwo.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" style="background-color: chartreuse">
     <div class="headbar">
-        <p>This is the button two page.</p>
+        <h2>This is the button two page.</h2>
     </div>
     <div>
         <nav class="navbar">
