--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="headbar">
-        <p>Welcome to Codekvast Spring Boot Sample</p>
+        <h1>Welcome to Codekvast Spring Boot Sample</h1>
     </div>
     <div>
         <nav class="navbar">
