Added a ButtonThreeService, which never is invoked. Added Lombok.

--- a/src/main/resources/static/buttonThree.html
+++ b/src/main/resources/static/buttonThree.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-<div class="container" style="background-color: darkgray">
+<div class="container" style="background-color: mediumpurple">
     <div class="headbar">
-        <h1>This is the Button One page.</h1>
+        <h1>This is the Button Three page.</h1>
     </div>
     <div>
         <nav class="navbar">
             <div class="likeButton" onclick="window.location.href='/'">
                 Home
             </div>
-            <div class="likeButton buttonActive" onclick="window.location.href='/button1'">
+            <div class="likeButton" onclick="window.location.href='/button1'">
                 Button 1
             </div>
             <div class="likeButton" onclick="window.location.href='/button2'">
                 Button 2
             </div>
-            <div class="likeButton" onclick="window.location.href='/button3'">
+            <div class="likeButton buttonActive" onclick="window.location.href='/button3'">
                 Button 3
             </div>
         </nav>
