--- a/src/main/resources/static/buttonTwo.html
+++ b/src/main/resources/static/buttonTwo.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Button One</title>
+    <title>The Button Two</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
 <div class="container" style="background-color: chartreuse">
     <div class="headbar">
-        <h2>This is the Button Two page.</h2>
+        <h1>This is the Button Two page.</h1>
     </div>
     <div>
         <nav class="navbar">
@@ -17,6 +17,12 @@
             </div>
             <div class="likeButton" onclick="window.location.href='/button1'">
                 Button 1
+            </div>
+            <div class="likeButton buttonActive" onclick="window.location.href='/button2'">
+                Button 2
+            </div>
+            <div class="likeButton" onclick="window.location.href='/button3'">
+                Button 3
             </div>
         </nav>
     </div>
