--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -12,11 +12,17 @@
     </div>
     <div>
         <nav class="navbar">
+            <div class="likeButton buttonActive" onclick="window.location.href='/'">
+                Home
+            </div>
             <div class="likeButton" onclick="window.location.href='/button1'">
                 Button 1
             </div>
             <div class="likeButton" onclick="window.location.href='/button2'">
                 Button 2
+            </div>
+            <div class="likeButton" onclick="window.location.href='/button3'">
+                Button 3
             </div>
         </nav>
     </div>
