--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -9,6 +9,13 @@
 <div class="container">
     <div class="headbar">
         <h1>Welcome to Codekvast Spring Boot Sample</h1>
+        <form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
+            <fieldset>
+                <legend>Open Codekvast Warehouse</legend>
+                <label for="email">Your email address:</label><input id="email" name="email" type="email">
+                <input type="submit" value="Go">
+            </fieldset>
+        </form>
     </div>
     <div>
         <nav class="navbar">
@@ -25,6 +32,7 @@
                 Button 3
             </div>
         </nav>
+
     </div>
 </div>
 </body>
