Improved label for simulated SSO user.

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -12,7 +12,7 @@
         <form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
             <fieldset>
                 <legend>Open Codekvast Warehouse</legend>
-                <label for="email">Your email address:</label><input id="email" name="email" type="email">
+                <label for="email">Your simulated Heroku user:&nbsp;</label><input id="email" name="email" type="email" title="Simulate that you are logged in to Heroku as this user">
                 <input type="submit" value="Go">
             </fieldset>
         </form>
