--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -2,20 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Codekvast Spring Boot Sample</title>
+    <title>Codekvast Sample1</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
 <div class="container">
     <div class="headbar">
-        <h1>Welcome to Codekvast Spring Boot Sample</h1>
-        <form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
-            <fieldset>
-                <legend>Open Codekvast Warehouse</legend>
-                <label for="email">Your simulated Heroku user:&nbsp;</label><input id="email" name="email" type="email" title="Simulate that you are logged in to Heroku as this user">
-                <input type="submit" value="Go">
-            </fieldset>
-        </form>
+        <h1>Welcome to Codekvast Sample1</h1>
     </div>
     <div>
         <nav class="navbar">
@@ -35,5 +28,19 @@
 
     </div>
 </div>
+
+<form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
+    <fieldset>
+        <legend>This app is instrumented with Codekvast Agent</legend>
+        <p>I guess that you want to see what data Codekvast Agent is collecting?</p>
+        <p>Normally, you do that by issuing <code class="terminal">heroku addons:open codekvast</code> from your Heroku app's development workspace (or from the Heroku dashboard).</p>
+        <p>That will do a Single-Sign On (SSO) to <a href="https://app.codekvast.io" target="_blank">Codekvast Warehouse</a> with your Heroku credentials, allowing you to browse the data for the instrumented app.</p>
+        <p>For demonstration purposes, this sample app is able to perform the same SSO as Heroku. This enables you to immediately kick the tyres of Codekvast without further ado.</p>
+        <p>Also for demonstration purposes, this sample app uses a special demo plan, which makes collected data available much faster than for a normal client.</p>
+
+        <label for="email">Your simulated Heroku user:&nbsp;</label><input id="email" name="email" type="email" title="Simulate that you are logged in to Heroku as this user">
+        <input type="submit" value="Open Codekvast Warehouse">
+    </fieldset>
+</form>
 </body>
 </html>
